# goldo_broker_cpp

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/goldo_codecs/: CMakeLists.txt
libs/goldo_codecs/src/: goldo_nucleo_transcoder.cpp  goldo_nucleo_transcoder.hpp  message_types.hpp  zmq_codecs.cpp  zmq_codecs.hpp
libs/goldo_pb2/: CMakeLists.txt
libs/goldo_pb2/src/goldo/: camera.pb.cc  camera.pb.h  log.pb.cc  log.pb.h  nucleo.pb.cc  nucleo.pb.h  path_planner.pb.cc  path_planner.pb.h  pb2_options.pb.cc  pb2_options.pb.h  robot.pb.cc  robot.pb.h  rplidar.pb.cc  rplidar.pb.h  strategy.pb.cc  strategy.pb.h  table.pb.cc  table.pb.h
libs/goldo_pb2/src/goldo/common/: geometry.pb.cc  geometry.pb.h
libs/goldo_pb2/src/goldo/nucleo/: dynamixels.pb.cc  dynamixels.pb.h  fpga.pb.cc  fpga.pb.h  gpio.pb.cc  gpio.pb.h  hal.pb.cc  hal.pb.h  main.pb.cc  main.pb.h  odometry.pb.cc  odometry.pb.h  odrive.pb.cc  odrive.pb.h  propulsion.pb.cc  propulsion.pb.h  robot.pb.cc  robot.pb.h  robot_simulator.pb.cc  robot_simulator.pb.h  servos.pb.cc  servos.pb.h  statistics.pb.cc  statistics.pb.h
src/: broker.cpp  broker.hpp  main.cpp
